OldHandins/Assignment 4/BPRD-04-MadsLjungberg-2018/Fun/FunPar.fsyacc.output
Output file describing compiled parser placed in FunPar.fs and FunPar.fsi
------------------------
states = 
state 0:
  items:
    _startMain ->  . Main

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9998):   shift 12
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   shift 6
    action 'IN' (noprec):   error
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   shift 42
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Main: 1
    goto Expr: 2
    goto AtExpr: 4
    goto AppExpr: 5
    goto Const: 45

state 1:
  items:
    _startMain -> Main . 

  actions:
    action 'EOF' (noprec):   accept
    action 'LPAR' (noprec):   accept
    action 'RPAR' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'ARROW' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'DIV' (noprec):   accept
    action 'MOD' (noprec):   accept
    action 'ELSE' (noprec):   accept
    action 'END' (noprec):   accept
    action 'FALSE' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'IN' (noprec):   accept
    action 'LET' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'THEN' (noprec):   accept
    action 'TRUE' (noprec):   accept
    action 'FUN' (noprec):   accept
    action 'CSTBOOL' (noprec):   accept
    action 'NAME' (noprec):   accept
    action 'CSTINT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    Main -> Expr . 'EOF'
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (noprec):   shift 3
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'EQ' (explicit left 9996):   shift 36
    action 'NE' (explicit left 9996):   shift 37
    action 'GT' (explicit nonassoc 9997):   shift 38
    action 'LT' (explicit nonassoc 9997):   shift 39
    action 'GE' (explicit nonassoc 9997):   shift 40
    action 'LE' (explicit nonassoc 9997):   shift 41
    action 'ARROW' (noprec):   error
    action 'PLUS' (explicit left 9998):   shift 31
    action 'MINUS' (explicit left 9998):   shift 32
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'IN' (noprec):   error
    action 'LET' (noprec):   error
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 3:
  items:
    Main -> Expr 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce Main --> Expr 'EOF'
    action 'LPAR' (noprec):   reduce Main --> Expr 'EOF'
    action 'RPAR' (noprec):   reduce Main --> Expr 'EOF'
    action 'EQ' (noprec):   reduce Main --> Expr 'EOF'
    action 'NE' (noprec):   reduce Main --> Expr 'EOF'
    action 'GT' (noprec):   reduce Main --> Expr 'EOF'
    action 'LT' (noprec):   reduce Main --> Expr 'EOF'
    action 'GE' (noprec):   reduce Main --> Expr 'EOF'
    action 'LE' (noprec):   reduce Main --> Expr 'EOF'
    action 'ARROW' (noprec):   reduce Main --> Expr 'EOF'
    action 'PLUS' (noprec):   reduce Main --> Expr 'EOF'
    action 'MINUS' (noprec):   reduce Main --> Expr 'EOF'
    action 'TIMES' (noprec):   reduce Main --> Expr 'EOF'
    action 'DIV' (noprec):   reduce Main --> Expr 'EOF'
    action 'MOD' (noprec):   reduce Main --> Expr 'EOF'
    action 'ELSE' (noprec):   reduce Main --> Expr 'EOF'
    action 'END' (noprec):   reduce Main --> Expr 'EOF'
    action 'FALSE' (noprec):   reduce Main --> Expr 'EOF'
    action 'IF' (noprec):   reduce Main --> Expr 'EOF'
    action 'IN' (noprec):   reduce Main --> Expr 'EOF'
    action 'LET' (noprec):   reduce Main --> Expr 'EOF'
    action 'NOT' (noprec):   reduce Main --> Expr 'EOF'
    action 'THEN' (noprec):   reduce Main --> Expr 'EOF'
    action 'TRUE' (noprec):   reduce Main --> Expr 'EOF'
    action 'FUN' (noprec):   reduce Main --> Expr 'EOF'
    action 'CSTBOOL' (noprec):   reduce Main --> Expr 'EOF'
    action 'NAME' (noprec):   reduce Main --> Expr 'EOF'
    action 'CSTINT' (noprec):   reduce Main --> Expr 'EOF'
    action 'error' (noprec):   reduce Main --> Expr 'EOF'
    action '#' (noprec):   reduce Main --> Expr 'EOF'
    action '$$' (noprec):   reduce Main --> Expr 'EOF'

  immediate action:   reduce Main --> Expr 'EOF'
 gotos:

state 4:
  items:
    Expr -> AtExpr . 
    AppExpr -> AtExpr . AtExpr

  actions:
    action 'EOF' (noprec):   reduce Expr --> AtExpr
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   reduce Expr --> AtExpr
    action 'EQ' (noprec):   reduce Expr --> AtExpr
    action 'NE' (noprec):   reduce Expr --> AtExpr
    action 'GT' (noprec):   reduce Expr --> AtExpr
    action 'LT' (noprec):   reduce Expr --> AtExpr
    action 'GE' (noprec):   reduce Expr --> AtExpr
    action 'LE' (noprec):   reduce Expr --> AtExpr
    action 'ARROW' (noprec):   reduce Expr --> AtExpr
    action 'PLUS' (noprec):   reduce Expr --> AtExpr
    action 'MINUS' (noprec):   reduce Expr --> AtExpr
    action 'TIMES' (noprec):   reduce Expr --> AtExpr
    action 'DIV' (noprec):   reduce Expr --> AtExpr
    action 'MOD' (noprec):   reduce Expr --> AtExpr
    action 'ELSE' (noprec):   reduce Expr --> AtExpr
    action 'END' (noprec):   reduce Expr --> AtExpr
    action 'FALSE' (noprec):   reduce Expr --> AtExpr
    action 'IF' (noprec):   reduce Expr --> AtExpr
    action 'IN' (noprec):   reduce Expr --> AtExpr
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   reduce Expr --> AtExpr
    action 'THEN' (noprec):   reduce Expr --> AtExpr
    action 'TRUE' (noprec):   reduce Expr --> AtExpr
    action 'FUN' (noprec):   reduce Expr --> AtExpr
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   reduce Expr --> AtExpr
    action '#' (noprec):   reduce Expr --> AtExpr
    action '$$' (noprec):   reduce Expr --> AtExpr

  immediate action: <none>
 gotos:
    goto AtExpr: 58
    goto Const: 45

state 5:
  items:
    Expr -> AppExpr . 
    AppExpr -> AppExpr . AtExpr

  actions:
    action 'EOF' (noprec):   reduce Expr --> AppExpr
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   reduce Expr --> AppExpr
    action 'EQ' (noprec):   reduce Expr --> AppExpr
    action 'NE' (noprec):   reduce Expr --> AppExpr
    action 'GT' (noprec):   reduce Expr --> AppExpr
    action 'LT' (noprec):   reduce Expr --> AppExpr
    action 'GE' (noprec):   reduce Expr --> AppExpr
    action 'LE' (noprec):   reduce Expr --> AppExpr
    action 'ARROW' (noprec):   reduce Expr --> AppExpr
    action 'PLUS' (noprec):   reduce Expr --> AppExpr
    action 'MINUS' (noprec):   reduce Expr --> AppExpr
    action 'TIMES' (noprec):   reduce Expr --> AppExpr
    action 'DIV' (noprec):   reduce Expr --> AppExpr
    action 'MOD' (noprec):   reduce Expr --> AppExpr
    action 'ELSE' (noprec):   reduce Expr --> AppExpr
    action 'END' (noprec):   reduce Expr --> AppExpr
    action 'FALSE' (noprec):   reduce Expr --> AppExpr
    action 'IF' (noprec):   reduce Expr --> AppExpr
    action 'IN' (noprec):   reduce Expr --> AppExpr
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   reduce Expr --> AppExpr
    action 'THEN' (noprec):   reduce Expr --> AppExpr
    action 'TRUE' (noprec):   reduce Expr --> AppExpr
    action 'FUN' (noprec):   reduce Expr --> AppExpr
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   reduce Expr --> AppExpr
    action '#' (noprec):   reduce Expr --> AppExpr
    action '$$' (noprec):   reduce Expr --> AppExpr

  immediate action: <none>
 gotos:
    goto AtExpr: 59
    goto Const: 45

state 6:
  items:
    Expr -> 'IF' . Expr 'THEN' Expr 'ELSE' Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9998):   shift 12
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   shift 6
    action 'IN' (noprec):   error
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   shift 42
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Expr: 7
    goto AtExpr: 4
    goto AppExpr: 5
    goto Const: 45

state 7:
  items:
    Expr -> 'IF' Expr . 'THEN' Expr 'ELSE' Expr
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'EQ' (explicit left 9996):   shift 36
    action 'NE' (explicit left 9996):   shift 37
    action 'GT' (explicit nonassoc 9997):   shift 38
    action 'LT' (explicit nonassoc 9997):   shift 39
    action 'GE' (explicit nonassoc 9997):   shift 40
    action 'LE' (explicit nonassoc 9997):   shift 41
    action 'ARROW' (noprec):   error
    action 'PLUS' (explicit left 9998):   shift 31
    action 'MINUS' (explicit left 9998):   shift 32
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'IN' (noprec):   error
    action 'LET' (noprec):   error
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   shift 8
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 8:
  items:
    Expr -> 'IF' Expr 'THEN' . Expr 'ELSE' Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9998):   shift 12
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   shift 6
    action 'IN' (noprec):   error
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   shift 42
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Expr: 9
    goto AtExpr: 4
    goto AppExpr: 5
    goto Const: 45

state 9:
  items:
    Expr -> 'IF' Expr 'THEN' Expr . 'ELSE' Expr
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'EQ' (explicit left 9996):   shift 36
    action 'NE' (explicit left 9996):   shift 37
    action 'GT' (explicit nonassoc 9997):   shift 38
    action 'LT' (explicit nonassoc 9997):   shift 39
    action 'GE' (explicit nonassoc 9997):   shift 40
    action 'LE' (explicit nonassoc 9997):   shift 41
    action 'ARROW' (noprec):   error
    action 'PLUS' (explicit left 9998):   shift 31
    action 'MINUS' (explicit left 9998):   shift 32
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (explicit left 9995):   shift 10
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'IN' (noprec):   error
    action 'LET' (noprec):   error
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 10:
  items:
    Expr -> 'IF' Expr 'THEN' Expr 'ELSE' . Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9998):   shift 12
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   shift 6
    action 'IN' (noprec):   error
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   shift 42
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Expr: 11
    goto AtExpr: 4
    goto AppExpr: 5
    goto Const: 45

state 11:
  items:
    Expr -> 'IF' Expr 'THEN' Expr 'ELSE' Expr . 
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'LPAR' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'RPAR' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'EQ' (explicit left 9996):   shift 36
    action 'NE' (explicit left 9996):   shift 37
    action 'GT' (explicit nonassoc 9997):   shift 38
    action 'LT' (explicit nonassoc 9997):   shift 39
    action 'GE' (explicit nonassoc 9997):   shift 40
    action 'LE' (explicit nonassoc 9997):   shift 41
    action 'ARROW' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'PLUS' (explicit left 9998):   shift 31
    action 'MINUS' (explicit left 9998):   shift 32
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'END' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'FALSE' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'IF' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'IN' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'LET' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'NOT' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'THEN' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'TRUE' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'FUN' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'CSTBOOL' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'NAME' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'CSTINT' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action 'error' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action '#' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr
    action '$$' (explicit left 9995):   reduce Expr --> 'IF' Expr 'THEN' Expr 'ELSE' Expr

  immediate action: <none>
 gotos:

state 12:
  items:
    Expr -> 'MINUS' . Expr

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 56
    action 'RPAR' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9998):   shift 12
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'END' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'IF' (noprec):   shift 6
    action 'IN' (noprec):   error
    action 'LET' (noprec):   shift 47
    action 'NOT' (noprec):   error
    action 'THEN' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FUN' (noprec):   shift 42
    action 'CSTBOOL' (noprec):   shift 61
    action 'NAME' (noprec):   shift 46
    action 'CSTINT' (noprec):   shift 60
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Expr: 13
    goto AtExpr: 4
    goto AppExpr: 5
    goto Const: 45

state 13:
  items:
    Expr -> 'MINUS' Expr . 
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'LPAR' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'RPAR' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'EQ' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'NE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'GT' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'LT' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'GE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'LE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'ARROW' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'PLUS' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'MINUS' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'END' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'FALSE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'IF' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'IN' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'LET' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'NOT' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'THEN' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'TRUE' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'FUN' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'CSTBOOL' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'NAME' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'CSTINT' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action 'error' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action '#' (explicit left 9998):   reduce Expr --> 'MINUS' Expr
    action '$$' (explicit left 9998):   reduce Expr --> 'MINUS' Expr

  immediate action: <none>
 gotos:

state 14:
  items:
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr 'PLUS' Expr . 
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr

  actions:
    action 'EOF' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'LPAR' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'RPAR' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'EQ' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'NE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'GT' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'LT' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'GE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'LE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'ARROW' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'PLUS' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'MINUS' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'TIMES' (explicit left 9999):   shift 33
    action 'DIV' (explicit left 9999):   shift 34
    action 'MOD' (explicit left 9999):   shift 35
    action 'ELSE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'END' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'FALSE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'IF' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'IN' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'LET' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'NOT' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'THEN' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'TRUE' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'FUN' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'CSTBOOL' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'NAME' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'CSTINT' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action 'error' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action '#' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr
    action '$$' (explicit left 9998):   reduce Expr --> Expr 'PLUS' Expr

  immediate action: <none>
 gotos:

state 15:
  items:
    Expr -> Expr . 'PLUS' Expr
    Expr -> Expr . 'MINUS' Expr
    Expr -> Expr 'MINUS' Expr . 
    Expr -> Expr . 'TIMES' Expr
    Expr -> Expr . 'DIV' Expr
    Expr -> Expr . 'MOD' Expr
    Expr -> Expr . 'EQ' Expr
    Expr -> Expr . 'NE' Expr
    Expr -> Expr . 'GT' Expr
    Expr -> Expr . 'LT' Expr
    Expr -> Expr . 'GE' Expr
    Expr -> Expr . 'LE' Expr
